# plivo-streaming-python

./: ARCHITECTURE.md  README.md  main.py  pyproject.toml
examples/: fastapi_example.py  websockets_example.py  websockets_with_path.py
examples/fastapi_example/: README.md  main.py  pyproject.toml
examples/full_example/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
plivo_streaming/: __init__.py  base.py  types.py
plivo_streaming/fastapi/: __init__.py  streaming.py
plivo_streaming/websockets/: __init__.py  streaming.py
