[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plivo-streaming-python"
version = "0.1.0"
description = "Streaming SDK for Plivo in Python with FastAPI and WebSockets support"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "uvicorn[standard]>=0.24.0",
    "deepgram-sdk>=5.3.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "plivo>=4.59.3",
    "elevenlabs>=2.22.0",
    "openai>=2.6.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["plivo_streaming*"]

[tool.uv.workspace]
members = [
    "examples/fastapi_example",
    "examples/full_example",
]
