[project]
name = "full-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "deepgram-sdk>=5.3.0",
    "plivo-streaming-python>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "plivo>=4.59.3",
    "elevenlabs>=2.22.0",
    "openai>=2.6.1",
]

[tool.uv.sources]
plivo-streaming-python = { workspace = true }
